# GESTAO_BIBLIOTECA

./: Autor.cpp  Autor.h  Biblioteca.cpp  Biblioteca.h  CD.cpp  CD.h  CMakeLists.txt  DVD.cpp  DVD.h  Documento.cpp  Documento.h  Exemplar.cpp  Exemplar.h  ExemplarLivro.cpp  ExemplarLivro.h  Leitor.cpp  Leitor.h  Livro.cpp  Livro.h  README.md  Revista.cpp  Revista.h  example.txt  main.cpp
Encapsuladores/: EntradaAutor.cpp  EntradaAutor.h  EntradaDoc.cpp  EntradaDoc.h  EntradaExemplar.cpp  EntradaExemplar.h  EntradaFila.cpp  EntradaFila.h  EntradaLeitor.cpp  EntradaLeitor.h
EstruturasDados/: FilaDocumento.cpp  FilaDocumento.h  FilaLeitor.cpp  FilaLeitor.h  PilhaExemplar.cpp  PilhaExemplar.h
